--- a/.env
+++ b/.env
@@ -3,3 +3,12 @@ EMAIL_HOST = 'smtp.gmail.com'
 EMAIL_PORT = 587
 EMAIL_HOST_USER = 'EMAIL'
 EMAIL_HOST_PASSWORD = 'EMAIL-PASSWORD's
+SECRET_KEY='q93!0y5ri#jm73&b*=^5&(hc68$!05=a8i7@yij1wxn5a0s6er'
+DEBUG=True #set to false in production
+DB_NAME='instagram'
+DB_USER='home'
+DB_PASSWORD='kavene2001'
+DB_HOST='127.0.0.1'
+MODE='dev' #set to 'prod' in production
+ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
+DISABLE_COLLECTSTATIC=1
