--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 EMAIL_USE_TLS = True
-EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_HOST = 'akmunywoki@gmail.com'
 EMAIL_PORT = 587
-EMAIL_HOST_USER = 'EMAIL'
-EMAIL_HOST_PASSWORD = 'EMAIL-PASSWORD's
+EMAIL_HOST_USER = 'alishakavene'
+EMAIL_HOST_PASSWORD = 'alishakavene's
 SECRET_KEY='q93!0y5ri#jm73&b*=^5&(hc68$!05=a8i7@yij1wxn5a0s6er'
 DEBUG=True #set to false in production
 DB_NAME='instagram'
